[tool.poetry]
name = "bootloader"
version = "0.1.0"
description = "A tool for loading firmware onto Dephy devices."
authors = ["Jared <jcoughlin@dephy.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cleo = "^0.8.1"
pyserial = "^3.5"
boto3 = "^1.25.4"
flexsea = {path = "/home/latitude/Code/work/flexsea/", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.4"
mypy = "^0.982"
nox = "^2022.8.7"
pytest = "^7.2.0"
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bootloader = 'bootloader.core.main:main'


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "too-few-public-methods",
  "invalid-name",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.nox
  | \.venv
  | build
  | dist
)/
'''
